	(CygbuildCmdInstallCheckDocdir): Warn about missing doc/PKG dir.
	(CygbuildInstallPackageDocs): Add files: Copyright, Install
	(CygbuildBootVariablesGlobalMain): Remove 'debian' from
	variable `cygbuild_opt_exclude_dir'.
	(CygbuildCmdInstallCheckDocdir): Correct typo in find command
	that cause error: -type: command not found
	(CygbuildCmdInstallCheckLineEndings): Ignore error after head(1).

2008-02-15  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallDirClean): New.
	(CygbuildCmdInstallFinishMessage): New.
	(CygbuildInstallFixDocdirInstall): New.
	(CygbuildInstallFixEtcdirInstall): New.
	(CygbuildInstallFixEtcdirPostinstall): New.
	(CygbuildDefineGlobalMain): Define $DIR_ETC_GENERAL
	(CygbuildInstallFixMain): Use `CygbuildInstallFixDocdirInstall'
	and `CygbuildInstallFixEtcdirInstall'.
	(CygbuildInstallFixDocdirInstall): Remove empty directories.
	(CygbuildCmdInstallCheckDirStructure): Check that there are no
	files in tolevel usr/share usr/lib.
	(CygbuildConfCC): Always include users' options from
	configure.options. Do not clear e.g. --datadir. Move call
	`CygbuildFileReadOptionsMaybe' after the libtool check.
	(CygbuildCmdInstallMain): Move postinstall call to end.
	(CygbuildInstallFixEtcdirInstall): Support test mode.
	(CygbuildInstallFixDocdirInstall): Support test mode. Fix
	nasty bug where variables weremixed up with the environment.
	(CygbuildInstallFixEtcdirPostinstall): change cp(1) to
	install(1) in postinstall script.
	(CygbuildInstallFixDocdirInstall): Better doc/ check with ls(1).
	Exclude Cygwin dir from doc/ check.
	(CygbuildInstallFixEtcdirPostinstall): Correct /etc/default/<files> to
	/etc/defaults/etc/<files>
	(CygbuildInstallDefaultsPostinstall): Rename. Was
	`CygbuildInstallFixEtcdirPostinstall'. Make more general.
	(CygbuildCmdBuildStdMakefile): Show make call if -v option is set.
	(CygbuildShellEnvironenment): Fix bug where 'list' was newer
	filled in.