@@ -1,10 +1,15 @@
 # See http://cygwin.com/setup.html   The 'category' can be:
-# Admin Archive Audio Base Database Devel Doc Editors
-# Games Gnome Graphics Interpreters Libs Mail Math Net
-# Perl Python Science Security Shells System Text Utils Web X11
+# Accessibility Admin Archive Audio Base Database Devel Doc Editors Games
+# Gnome Graphics Interpreters KDE Libs Mail Math Mingw Misc Net Perl Python
+# Science Security Shells System Text Utils Web X11
 sdesc: ""
 ldesc: ""
 category: name1[ name2...]
 requires: cygwin [ package...]
 external-source: package
 conflicts:
+    Admin	Archive Audio	    Base  	Comm
+    Database	    Devel	Doc	Editors	    Games 	Gnome
+    Graphics	    Interpreters Libs	Mail	    Math 	Mingw
+    Net		    Perl	Python	Publishing  Science 	Shells
+    System	    Text	Utils	Web	    X11
